# BankChurn_PredictionModel

./: pyproject.toml
EDA/: model_performance.csv
notebook/: BankChurn_PredictionModel.ipynb
