[project]
name = "bankchurn-predictionmodel"
version = "1.0.0"
description = ""
authors = [
    {name = "Tathagat-Pagare",email = "tpagare8772@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "mlflow (>=3.7.0,<4.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "dvc (>=3.64.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
